# entry_points from setup.py:
# "ptpython = ptpython.entry_points.run_ptpython:run",
# "ptipython = ptpython.entry_points.run_ptipython:run",
# "ptpython%s = ptpython.entry_points.run_ptpython:run" % sys.version_info[0],
# "ptpython%s.%s = ptpython.entry_points.run_ptpython:run"
# % sys.version_info[:2],
# "ptipython%s = ptpython.entry_points.run_ptipython:run"
# % sys.version_info[0],
# "ptipython%s.%s = ptpython.entry_points.run_ptipython:run"
# % sys.version_info[:2],
#
# isort configuration that is compatible with Black.
#
# For ipython, a possible solution would be to set the `python` property to ">=3.8"
#
# ipython 8.0.0 also require:
# black
# jedi
# prompt_toolkit
# pygments
#
# commitizen requires Python >=3.6.2,<4.0.0, so it will not be satisfied for Python >=4.0.0

[tool]

[tool.black]
target-version = ['py36']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = "ptpython"
known_third_party = "prompt_toolkit,pygments,asyncssh"
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.poetry]
name = "ptpython"
version = "3.0.21rc1"
description = "Python REPL build on top of prompt_toolkit"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python"]
homepage = "https://github.com/prompt-toolkit/ptpython"
authors = ["Jonathan Slenders"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
appdirs = "^1.4.4"
black = {version = "22.1.0", extras = ["all"]}
importlib-metadata = {python = "<3.8", version = "*"}
ipython = {version = "^8.0.0", extras = ["ptipython"]}
jedi = "^0.18.1"
prompt-toolkit = "^3.0.26"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
commitizen = "^2.20.3"
language-formatters-pre-commit-hooks = "^2.2.0"

[tool.poetry.scripts]
ptpython = 'ptpython.entry_points.run_ptpython:run'
ptipython = 'ptpython.entry_points.run_ptipython:run'
ptpython3 = 'ptpython.entry_points.run_ptpython:run'
ptipython3 = 'ptpython.entry_points.run_ptipython:run'

[tool.commitizen]
version = "3.0.21rc1"
version_files = [
    "pyproject.toml:version",
]
[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
